<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>map_processor</name>
  <version>0.0.1</version>
  <description>Map Processing Node</description>
  <maintainer email="danxie2001@gmail.com">Daniel Xie</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>sensor_msgs_py</depend>
  <depend>orbslam3_ros2</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
